objects/CGC_Section__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Exercises__c</fullName>
        <label>Completed Exercises</label>
        <summaryFilterItems>
            <field>CGC_Milestone_and_Exercise__c.Completed_Ex__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CGC_Milestone_and_Exercise__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed_Milestones__c</fullName>
        <label>Completed Milestones</label>
        <summaryFilterItems>
            <field>CGC_Milestone_and_Exercise__c.Completion_Percentage__c</field>
            <operation>greaterOrEqual</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CGC_Milestone_and_Exercise__c.Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CGC_Milestone_and_Exercise__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IF( Completion_Percentage__c  &gt;= 100,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Percentage__c</fullName>
        <formula>(  Current_Value__c  /  Target_Value__c  )  * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <formula>Completed_Milestones__c  +  Completed_Exercises__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used by data tool to upsert appropriate data in the xDO environment.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>CGC_Program__c</referenceTo>
        <relationshipName>Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <label>Target Value</label>
        <summaryForeignKey>CGC_Milestone_and_Exercise__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Milestones_and_Exercises__c</fullName>
        <label>Total Milestones and Exercises</label>
        <summaryForeignKey>CGC_Milestone_and_Exercise__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Demo Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>